debug and fix indexing issue

--- a/config.yaml
+++ b/config.yaml
@@ -109,11 +109,13 @@ contracts:
     - event: ContestStatusChanged(uint8 status)
   - name: ScaffoldDaoShaman
     handler: src/ScaffoldDaoShaman.ts
+    abi_file_path: abis/ScaffoldDaoShaman.json
     events:  
-    - event: Initialized((uint8, uint256)[], address dao, address hats)
+    - event: Initialized(address dao, address hats, address lootTokenAddress, address sharesTokenAddress, string lootTokenSymbol, string sharesTokenSymbol)
     - event: BadgeSaved(uint256 badgeId, string name, (uint256, string) metadata, uint256 amount, bool isVotingToken, bool hasFixedAmount, bool isSlash)
     - event: BadgeRemoved(uint256 badgeId)
     - event: BadgeAssigned(uint256 badgeId, address recipient, uint256 amount, (uint256, string) metadata)
+    - event: GateUpdated(uint8 gateIndex, uint8 gateType, uint256 hatId)
 networks:
 - id: 421614 # Arbitrum Sepolia
   start_block: 39353224
@@ -147,7 +149,7 @@ networks:
   - name: AlloPoster
     address: 0x168752edda2ca12e361b0c6a60d958c25818ec9b
   - name: ScaffoldDaoShaman
-    address: 0x920fe0443690c7eb7c9058b6d8abd643aad1ab35
+    address: 0xc8AfD6195Bf2cA462157C9608F97Ba0Da2811938
 - id: 42161 # Arbitrum One
   start_block: 195499276
   end_block: null
@@ -179,7 +181,8 @@ networks:
   - name: AlloPoster
     address: 0xdeeceda1Ab6BCcC70eE2D15AF5e5a19d0B2793dD
   - name: ScaffoldDaoShaman
-    address: 0x920fe0443690c7eb7c9058b6d8abd643aad1ab35
+    address: 0xc8AfD6195Bf2cA462157C9608F97Ba0Da2811938
+
     
 
   
