--- a/config.yaml
+++ b/config.yaml
@@ -108,9 +108,9 @@ contracts:
     - event: Initialized(address contest, uint256 duration, address daoToken, address contextToken);
     - event: VotingStarted(uint256 startTime, uint256 endTime, address pointModule);
       isAsync: true
-    - event: VoteCast(address indexed voter, bytes32 choiceId, uint256 amount, (uint256, string) _reason, address _votingToken);
+    - event: VoteCast(address indexed voter, bytes32 choiceId, uint256 amount, (uint256, string) reason, address votingToken);
       isAsync: true
-    - event: VoteRetracted(address indexed voter, bytes32 choiceId, uint256 amount, (uint256, string) _reason, address _votingToken);  
+    - event: VoteRetracted(address indexed voter, bytes32 choiceId, uint256 amount, (uint256, string) reason, address votingToken);  
       isAsync: true
   - name: DualTokenPointsV0
     handler: src/DualTokenPointsV0.ts
